chore: spacing fix

--- a/scss/elements/dropdown/dropdown_mobile.scss
+++ b/scss/elements/dropdown/dropdown_mobile.scss
@@ -60,6 +60,7 @@
     line-height: 22px;
     text-align: center;
     border-bottom: 1px solid #e9e9e9;
+    margin-bottom: 12px;
   }
 
   .transition-enter {
